--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,14 @@
-baseURL = "http://example.org/"
+baseURL = "http://python-shoman.me/"
 languageCode = "en-us"
-title = "My New Hugo Site"
+title = "Python Course"
+theme = "book"
+
+[markup]
+[markup.goldmark.renderer]
+  unsafe = true
+
+[params]
+    BookTheme = "light"
+    BookLogo = "python-logo.png"
+    BookMenuBundle = "/menu"
+
